# llvm2mc

./: .gitignore  CMakeLists.txt  LICENSE  README.md  constConversion.h  main.cpp
include/: mcfunc.h  selector.h
instructions/: alloca.h  binaryOperator.h  ret.h
predefined/: abort.h
src/: CMakeLists.txt  const.h  main.cpp  prepare.cpp  prepare.h
src/instructions/: alloca.cpp  alloca.h  binaryOperator.cpp  binaryOperator.h  br.cpp  br.h  inttoptr.cpp  inttoptr.h  load.cpp  load.h  ptrtoint.cpp  ptrtoint.h  ret.cpp  ret.h  store.cpp  store.h  trunc.cpp  trunc.h  zext.cpp  zext.h
src/mcfunctions/: _entry.mcfunction  _load.mcfunction  _store.mcfunction
src/predefined/: abort.cpp  abort.h  data.cpp  data.h
src/utils/: constConversion.cpp  constConversion.h  misc.cpp  misc.h  stringUtils.cpp  stringUtils.h  valueConversion.cpp  valueConversion.h
